add: jwt in swagger
