# cmd/server/main.go
@@ -2,6 +2,10 @@ package main
 
 import "go-simple/internal/app"
 
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Enter your JWT token in the format: Bearer <token>
 func main() {
 	app.NewApp().Run()
 }
